--- a/.drone.yml
+++ b/.drone.yml
@@ -2,9 +2,20 @@ kind: pipeline
 type: docker
 name: default
 
+workspace:
+  path: golang
+
 steps:
-- name: display go version
-  image: golang
-  pull: if-not-exists
-  commands:
-  - go version
+  - name: golang_test
+    image: golang:latest
+    commands:
+      - pwd
+      - ls -al
+      - cd golang
+      - go vet
+      - go test -v -cover
+  - name: golang_build
+    image: golang:latest
+    commands:
+      - cd golang
+      - go build
